# AnubisCLI

./: .gitignore  README.md  pyproject.toml
example/: script-obf.py
src/anubis_cli/: anubis.py
